--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,9 @@
  * limitations under the License.
  -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.liquid.settings" android:sharedUserId="android.uid.system">
+    package="com.liquid.settings"
+    android:versionCode="001"
+    android:versionName="@string/version_name">
 
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
