LiquidSettings ~we need to update drawables ...odviously
now with splash screen
SecondActivity should be used as a template as I added the comments there

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.n00bware.churchkey"
+      package="com.liquid.settings"
       android:versionCode="0001"
       android:versionName="@string/version_name">
  
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".ChurchKeyActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".activities.SplashScreen"
+                  android:label="@string/app_name"
+                  android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".SecondActivity"
+        <activity android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:noHistory="true">
             <intent-filter>
@@ -21,7 +22,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ThirdActivity"
+        <activity android:name=".activities.SecondActivity"
+            android:label="@string/app_name"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".activities.ThirdActivity"
             android:label="@string/app_name"
             android:noHistory="true">
             <intent-filter>
