--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,10 @@
       android:versionName="@string/version_name">
  
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-sdk android:minSdkVersion="6" />
+
         <activity android:name=".activities.SplashScreen"
                   android:label="@string/app_name"
                   android:noHistory="true">
