--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="com.liquid.settings"
     android:versionCode="1"
     android:versionName="@string/version_name" >
-    
+    <uses-sdk android:minSdkVersion="14"/>
+
+    <uses-permission android:name="android.permission.HARDWARE_TEST" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.HARDWARE_TEST" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-sdk android:minSdkVersion="14" />
 
     <application
         android:icon="@drawable/app_icon"
